# port-bounty

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: release.yml
process-surgeon/: LICENSE  package-lock.json  package.json  tailwind.config.js
process-surgeon/src/: App.css  App.tsx
process-surgeon/src-tauri/: Cargo.toml  tauri.conf.json
process-surgeon/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
process-surgeon/src-tauri/src/discovery/: mod.rs  port_scanner.rs  process_info.rs
process-surgeon/src-tauri/src/docker/: mod.rs  resolver.rs
process-surgeon/src-tauri/src/surgery/: mod.rs  safety.rs  terminator.rs
process-surgeon/src/components/: ContextMenu.tsx  ExportDialog.tsx  FavoritesDialog.tsx  Header.tsx  HistoryPanel.tsx  PortIndicator.tsx  PortSearchDialog.tsx  ProcessDetailsPanel.tsx  ProcessRow.tsx  ProcessTable.tsx  index.ts
process-surgeon/src/hooks/: index.ts  useKeyboardShortcuts.tsx
process-surgeon/src/store/: index.ts
process-surgeon/src/types/: index.ts
process-surgeon/src/utils/: index.ts
