[package]
name = "process-surgeon"
version = "0.1.0"
description = "A cross-platform network resource management utility for developers"
authors = ["Streamline1175"]
license = "MIT"
repository = "https://github.com/Streamline1175/port-bounty"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "process_surgeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform process and system info
sysinfo = "0.31"

# Network socket enumeration
netstat2 = "0.11"

# Docker API integration
bollard = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Lazy initialization
once_cell = "1"

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

